--- a/public/.htaccess
+++ b/public/.htaccess
@@ -14,6 +14,9 @@ RewriteEngine On
 RewriteCond %{HTTP_HOST} ^andrewcayaetistacom17\.linuxforphp\.com$ [NC]
 RewriteRule ^(.*)$ https://flarelinux.xyz/$1 [L,R=301]
 
+RewriteCond %{HTTP_HOST} ^www\.flarelinux\.xyz$ [NC]
+RewriteRule ^(.*)$ https://flarelinux.xyz/$1 [L,R=301]
+
 # The following rule tells Apache that if the requested filename
 # exists, simply serve it.
 RewriteCond %{REQUEST_FILENAME} -s [OR]
@@ -399,7 +402,7 @@ AddDefaultCharset utf-8
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# Option 1: rewrite www.example.com → example.com
+# Option 1: rewrite www.example.com -> example.com
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
@@ -410,7 +413,7 @@ AddDefaultCharset utf-8
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# Option 2: rewrite example.com → www.example.com
+# Option 2: rewrite example.com -> www.example.com
 #
 # Be aware that the following might not be a good idea if you use "real"
 # subdomains for certain parts of your website.
